--- a/babies/index.html
+++ b/babies/index.html
@@ -11,11 +11,11 @@
   <nav class="navbar navbar-dark bg-primary navbar-expand-sm">
     <div class="container">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home</a>
-            <a class="nav-item nav-link" href="#">Babies</a>
-            <a class="nav-item nav-link" href="#">Toddlers</a>
-            <a class="nav-item nav-link" href="#">Kids</a>
-            <a class="nav-item nav-link" href="#">Teens</a>
+            <a class="nav-item nav-link active" href="https://collettesf.github.io/bootstrap/project/basicbootstrap/index.html">Home</a>
+            <a class="nav-item nav-link" href="https://collettesf.github.io/babies/babies/index.html">Babies</a>
+            <a class="nav-item nav-link" href="https://collettesf.github.io/toddlers/toddlers/index.html">Toddlers</a>
+            <a class="nav-item nav-link" href="https://collettesf.github.io/kids/kids/index.html">Kids</a>
+            <a class="nav-item nav-link" href="https://collettesf.github.io/teens/teens/index.html">Teens</a>
         </div>
     </div>
   </nav>
@@ -78,68 +78,64 @@
   </section>
 
   <section class="content" id="services">
-    <h2 class="text-primary">Babies</h2>
-    <p class="text-dark">Everything you need to know about the best care for your babies. We got you covered.</p>
+    <h2 class="text-primary">Sleeping</h2>
+    <p class="text-dark">Sleeping is very important for your baby, to do it the right way</p>
     <ul>
-      <li><a>Sleeping</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i64.tinypic.com/2mgupav.jpg" alt="Sleeping">
-      <li><a>Feeding</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i67.tinypic.com/sgqw0k.jpg" alt="Feeding">
-      <li><a>Hygiene</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i63.tinypic.com/2cjyjb.jpg" alt="Hygiene">
-      <li><a>Changing</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i63.tinypic.com/zmbc74.jpg" alt="Changing">
+      <li><a>A baby should always sleep in a crib without any blankets or objects for safety.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i67.tinypic.com/25fu1ph.jpg" alt="crib">
+      <li><a>A baby should have limited use sleeping in a baby swing to prevent an odd shaped head.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i65.tinypic.com/24gng2f.jpg" alt="swing">
+      <li><a>A baby should only sleep in a car seat for a short period of time to prevent an odd shaped head.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i65.tinypic.com/25a6d1f.jpg" alt="car">
+      <li><a>A baby should never sleep in the bed with you, the death rate is higher in bed next to you.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i66.tinypic.com/1z2dnr8.jpg" alt="bed">
     </ul>
 
   </section>
 
   <section class="content" id="services">
-    <h2 class="text-primary">Toddlers</h2>
-    <p class="text-dark">Having difficulties raising a little one that has an attitude and wants to run the house? We got you covered.</p>
+    <h2 class="text-primary">Feeding</h2>
+    <p class="text-dark">Feeding your baby certain ways can have benefits</p>
 
     <ul>
-      <li><a>Patience</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i65.tinypic.com/ne0w9.jpg" alt="Patience">
-      <li><a>Routine</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i63.tinypic.com/352fa02.jpg" alt="Routine">
-      <li><a>Playtime</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i63.tinypic.com/8ziafr.jpg" alt="Playtime">
-      <li><a>Discipline</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i66.tinypic.com/157zmmd.jpg" alt="Discipline">
+      <li><a>Breastfeeding is the most beneficial way for a healthy baby. They will bond better and the nutrients are specifically designed for your baby.</a></li>
+      <p><img class="float-none rounded" width="150" src="http://i66.tinypic.com/2hhoxu0.jpg" alt="breast">
+      <li><a>If you can't breastfeed, formula is the next best option.</a></li>
+      <p><img class="float-none rounded" width="150" src="http://i67.tinypic.com/6sz3tv.jpg" alt="formula">
+      <li><a>A baby should only have baby cereal when they are 6 months of age or older. Their stomachs can't process it properly.</a></li>
+      <p><img class="float-none rounded" width="150" src="http://i66.tinypic.com/30c55xf.jpg" alt="cereal">
+      <li><a>Animal milk should never be given to a baby. There's no good nutrition for the baby.</a></li>
+      <p><img class="float-none rounded" width="150" src="http://i63.tinypic.com/30b1kee.jpg" alt="milk">
     </ul>
 
   </section>
 
   <section class="content" id="services">
-    <h2 class="text-primary">Kids</h2>
-    <p class="text-dark">It's time for school, your child is taking the next step towards independence. We got your covered.</p>
+    <h2 class="text-primary">Hygiene</h2>
+    <p class="text-dark">Make sure to keep up good hygiene for your baby</p>
 
     <ul>
-      <li><a>Schedule</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i67.tinypic.com/2wqsynm.jpg" alt="Schedule">
-      <li><a>Chores</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i67.tinypic.com/vgmrgk.jpg" alt="Chores">
-      <li><a>Independence</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i65.tinypic.com/29dfk94.jpg" alt="Independence">
-      <li><a>Discipline</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i66.tinypic.com/28bxh76.jpg" alt="Discipline">
+      <li><a>A baby should have a bath once a week at minimal.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i68.tinypic.com/14w3fjs.jpg" alt="bath">
+      <li><a>As soon as the first tooth pops out, brush the babies tooth. Baby cavities can transfer to adult teeth.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i63.tinypic.com/21ki7u9.jpg" alt="brush">
+      <li><a>Wash your babies clothes and linens often to keep the baby clean from germs.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i64.tinypic.com/302tclg.jpg" alt="laundry">
     </ul>
 
   </section>
 
   <section class="content" id="services">
-    <h2 class="text-primary">Teens</h2>
+    <h2 class="text-primary">Changing</h2>
     <p class="text-dark">Are you tired of the sighing, rebel, ungrateful hormonal child that just won't quit. We got you covered.</p>
 
     <ul>
-      <li><a>Puberty</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i63.tinypic.com/2116npj.jpg" alt="Puberty">
-      <li><a>Preparing</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i65.tinypic.com/15q9a3o.jpg" alt="Preparing">
-      <li><a>Bonding</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i67.tinypic.com/28txi87.jpg" alt="Bonding">
-      <li><a>Discipline</a></li>
-      <p><img class="float-none rounded" width="100" src="http://i65.tinypic.com/19o0n8.jpg" alt="Discipline">
+      <li><a>Wipe front to back to prevent infection.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i67.tinypic.com/s3o8cn.jpg" alt="wipe">
+      <li><a>Have a clean diaper under a dirty one for easy changing.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i67.tinypic.com/2qwhlw8.jpg" alt="diaper">
+      <li><a>Change the diaper immediately to prevent a rash, if the bottom is red use rash cream.</a></li>
+      <p><img class="float-none rounded" width="200" src="http://i64.tinypic.com/4qsxmq.jpg" alt="rash">
     </ul>
 
   </section>
