--- a/babies/index.html
+++ b/babies/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<!-- ADDITIONAL STYLESHEET HERE -->
     <title>Parenting 101</title>
   </head>
   <nav class="navbar navbar-dark bg-primary navbar-expand-sm">
@@ -24,7 +23,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<!-- ADDITIONAL JS HERE -->
 <section>
   <div class="display-4">Babies</div>
   <p class="bg-primary text-white">We offer <strong>specialized advice</strong> for <em>Babies</p>
@@ -47,10 +45,10 @@
       <article class="col">
         <img class="img-fluid" src="http://i68.tinypic.com/27ytvh2.jpg" alt="Icon">
         <h3>Parenting Books</h3>
-          <p><img class="float-none rounded" width="100" src="http://i63.tinypic.com/j9n5s1.jpg" alt="Expect">
-          <p><img class="float-none rounded" width="100" src="http://i64.tinypic.com/2isyrfn.jpg" alt="Hacks">
-          <p><img class="float-none rounded" width="100" src="http://i67.tinypic.com/za444.jpg" alt="Teen">
-          <p><img class="float-none rounded" width="100" src="http://i66.tinypic.com/wvzbl2.jpg" alt="Grow">
+          <p><img class="float-none rounded" width="100" src="http://i63.tinypic.com/j9n5s1.jpg" alt="expect">
+          <p><img class="float-none rounded" width="100" src="http://i64.tinypic.com/2isyrfn.jpg" alt="hacks">
+          <p><img class="float-none rounded" width="100" src="http://i67.tinypic.com/za444.jpg" alt="teen">
+          <p><img class="float-none rounded" width="100" src="http://i66.tinypic.com/wvzbl2.jpg" alt="grow">
 
        </article>
 
@@ -74,7 +72,7 @@
         <p>"A++ Love this site!" Jessica</p>
         <p>"I had no clue what I was doing but now my child listens!" Caleb</p>
       </article>
-    </div><!-- content container -->
+    </div>
   </section>
 
   <section class="content" id="services">
